Changed and added new charts

--- a/index.html
+++ b/index.html
@@ -193,13 +193,23 @@
                 </div>
 
                 <div class="chart-card">
-                    <h3 class="chart-title">Наявність послуг</h3>
-                    <canvas id="servicesChart"></canvas>
+                    <h3 class="chart-title">Сервісні послуги</h3>
+                    <canvas id="serviceChart"></canvas>
                 </div>
 
                 <div class="chart-card">
-                    <h3 class="chart-title">Інфраструктура</h3>
-                    <canvas id="infrastructureChart"></canvas>
+                    <h3 class="chart-title">Безбар'єрність</h3>
+                    <canvas id="accessibilityChart"></canvas>
+                </div>
+
+                <div class="chart-card">
+                    <h3 class="chart-title">Цифрові послуги</h3>
+                    <canvas id="digitalChart"></canvas>
+                </div>
+
+                <div class="chart-card">
+                    <h3 class="chart-title">Доступна комунікація</h3>
+                    <canvas id="communicationChart"></canvas>
                 </div>
             </div>
         </div>
